src/main/kubernetes/istio-gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: pet-shop-gateway
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: pet-shop-vs
spec:
  hosts:
  - "*"
  gateways:
  - "pet-shop-gateway"
  http:
  - match:
    - uri:
        prefix: /financa
    route:
     - destination:
       #o host deve ser o mesmo nome do atributo name do service
        host: pet-shop-finances.default.svc.cluster.local
  - match:
    - uri:
        prefix: /crud
    route:
     - destination:
         #o host deve ser o mesmo nome do atributo name do service
        host: pet-shop-crud.default.svc.cluster.local
